chore: ERC7683 only integration test

--- a/integration/.example.env
+++ b/integration/.example.env
@@ -1,6 +1,4 @@
-ETH_RPC_URL=https://rpc.mekong.ethpandaops.io
-
-# This address needs an ETH balance on mekong.
+# This address needs an ETH balance. 
 ADDRESS=
 PRIVATE_KEY=
 
@@ -8,7 +6,12 @@ PRIVATE_KEY=
 USER_ADDRESS=
 USER_PRIVATE_KEY=
 
-# Can update these addresses on fresh deploys. 
-SENDERCHECK_ADDRESS=0x28a345b02f784419246b4d50c6ca0fe2802d104d
-DESTINATIONSETTLER_ADDRESS=0xe60d6a67043083bf01a0e7151f8434db31963c03
-XACCOUNT_ADDRESS=0xb9e7a274f46dcf075a57ce82f50927b217e80663
+# Polymer Proof API 
+POLYMER_API_KEY=
+
+# Can update these addresses on fresh deploys. Not all are relevant depending on integration test.
+ORIGINSETTLER_ADDRESS=
+DESTINATIONSETTLER_ADDRESS=
+HELLOWORLD_ADDRESS=
+SENDERCHECK_ADDRESS=
+XACCOUNT_ADDRESS=
