chore: clean up work

--- a/integration/.example.env
+++ b/integration/.example.env
@@ -8,6 +8,7 @@ USER_PRIVATE_KEY=
 
 # Polymer Proof API 
 POLYMER_API_KEY=
+CROSS_L2_ADDRESS=
 
 # Can update these addresses on fresh deploys. Not all are relevant depending on integration test.
 ORIGINSETTLER_ADDRESS=
