--- a/integration/package.json
+++ b/integration/package.json
@@ -12,14 +12,15 @@
   "dependencies": {
     "@noble/curves": "^1.7.0",
     "dotenv": "^16.4.7",
+    "node-fetch": "^3.3.2",
     "viem": "^2.21.55"
   },
-  "prettier":{
+  "prettier": {
     "singleQuote": true,
     "useTabs": false,
     "semi": false,
     "tabWidth": 4,
-    "printWidth": 240 ,
+    "printWidth": 240,
     "bracketSameLine": true
   }
 }
